corrigir documentação swagger
